tdf#147122 - Return cell object when a simple selection is merged

Change-Id: I4ddd3b3a804f8300a5ec15526f4c9c77aaf45fc5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145378
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit b9411e587586750f36ba9009b5f1e29fe461d8b5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145452
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>